<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_details"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createTask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittetext"
        android:hint="@string/enter_your_task"
        android:importantForAccessibility="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#BFBBBB" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createTask_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittetext"
        android:hint="@string/add_priority"
        android:importantForAccessibility="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#BFBBBB" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createTask_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittetext"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/select_due_date"
        android:importantForAccessibility="no"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#BFBBBB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_task"
        android:textColor="@color/white"
        android:textSize="24sp" />
</LinearLayout>
