<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="7dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:backgroundTint="@color/beige"
        app:cardCornerRadius="10dp">

        <FrameLayout
            android:id="@+id/task_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:textColor="@color/black"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/due_date"
                android:textSize="18sp"
                android:layout_marginBottom="5dp" />


            <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Mainstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="10dp"
            android:text="@string/status_active"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="28sp"
            android:textColor="@color/black"
            />

        </FrameLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>